Fix 'Crashes on cancelling the creation of a new class with the "Creation" tool in sequence diagram'

umbrello/toolbarstatemessages.cpp
- In function mouseReleaseEmpty test return value from
  Object_Factory::createUMLObject() to be non null.
  If null then do not call Widget_Factory::createWidget and its follow-
  on operations.

umbrello/object_factory.cpp
- At function createUMLObject document the fact that the function may
  return nullptr.

BUG: 443580
FIXED-IN:2.33.80 (KDE releases 22.03.80)